--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,8 @@ pico_enable_stdio_usb(OneShot 0)
 
 # Add the standard library to the build
 target_link_libraries(OneShot
-        pico_stdlib)
+        pico_stdlib
+        pico_time)
 
 # Add the standard include files to the build
 target_include_directories(OneShot PRIVATE
